<resources>
    <string name="app_name">WifiChatProject</string>

    <string name="network_NotConnected">You are not connected to any network</string>
    <string name="network_Wifi_AP_title">Create a Wi-fi access point</string>
    <string name="network_Wifi_AP_desc">Use this phone as an access point</string>
    <string name="network_Wifi_connect_title">Connect to a Wi-fi network</string>
    <string name="network_Wifi_connect_desc">Join a Wi-fi network</string>
    <string name="network_PlaneMode_title">Without network</string>
    <string name="network_PlaneMode_desc">Use the application without connecting to any network</string>
    <string name="network_Wifi_Not_found">Unable to find any wifi network</string>


    <string name="Icon_router_desc">Icon who\'s describing Wifi access point</string>
    <string name="Icon_wifi_desc">Icon who\'s describing Wi-fi network</string>
    <string name="Icon_plane_desc">Icon who\'s describing \"without network\"</string>

    <string name="AP_success">Access point successfully created</string>
    <string name="AP_fail">Fail to create access point</string>

    <string name="APP_TITLE">Create your access point</string>
    <string name="APP_SSID_Name">Name (SSID)</string><!--APP = access_point_parameters-->
    <string name="APP_Protection">Protection</string>
    <string name="APP_Password">Password</string>
    <string name="APP_ShowPassword">Show password</string>
    <!--<string-array name="APP_TypeEncryption">
        <item>@string/ENCRYPTION_None</item>
        <item>@string/ENCRYPTION_WPA</item>
        <item>@string/ENCRYPTIOn_WPA2</item>
        <item>@string/ENCRYPTION_WPA2PSK</item>
        <item>@string/ENCRYPTION_WEP</item>
    </string-array>
    <string name="ENCRYPTION_None">None</string>
    <string name="ENCRYPTION_WPA">WPA</string>
    <string name="ENCRYPTIOn_WPA2">WPA2</string>
    <string name="ENCRYPTION_WPA2PSK">WPA2-PSK ( recommended )</string>
    <string name="ENCRYPTION_WEP">WEP</string>-->
    <string-array name="APP_TypeEncryption">
        <item>@string/ENCRYPTION_None</item>
        <item>@string/ENCRYPTION_WPA2PSK</item>
    </string-array>
    <string name="ENCRYPTION_None">None</string>
    <string name="ENCRYPTION_WPA2PSK">WPA2-PSK ( create password )</string>

    <string name="Cancel">Cancel</string>
    <string name="Create">Create</string>
    <string name="Activate">Activate</string>

    <string name="PermWriteSystemTitle">You need to activate write settings system !</string>
    <string name="PermWriteSystemDesc">By clicking on "Activate" this will redirect you on the permission menu of the app. You will have a button and you will have to turn on this one to use this app. By clicking on "Cancel" on will not be able to use this functionality</string>
    <!--
        TODO need to translate in french -->
</resources>

