<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="32">

        <EditText
            android:id="@+id/SSIDInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/APP_SSID_Name"
            android:inputType="textCapSentences" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/PasswordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/APP_Protection" />

    <Spinner
        android:id="@+id/SpinnerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/LinearLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="32">

            <EditText
                android:id="@+id/PasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/APP_Password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/ShowPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/APP_ShowPassword" />

    </LinearLayout>


</LinearLayout>