<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/NotConnected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/network_NotConnected" />

    <LinearLayout
        android:id="@+id/LayoutWifiCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal"
        android:focusable="true">

        <ImageView
            android:id="@+id/WifiCreateImg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/Icon_router_desc"
            android:visibility="visible"
            app:srcCompat="@drawable/router_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TitleCreateWifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/network_Wifi_AP_title"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/DescCreateWifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4sp"
                android:text="@string/network_Wifi_AP_desc" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutWifiJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal"
        android:focusable="true">

        <ImageView
            android:id="@+id/WifiConnectImg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/Icon_wifi_desc"
            app:srcCompat="@drawable/wifi_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TitleJoinWifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/network_Wifi_connect_title"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/DescWifiJoin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4sp"
                android:text="@string/network_Wifi_connect_desc" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutBluetoothMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal"
        android:visibility="gone"
        android:focusable="true">

        <ImageView
            android:id="@+id/BluetoothMode"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="TODO"
            tools:srcCompat="@drawable/bluetooth_icon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TitleBluetoothMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Utiliser le bluetooth"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/DesBluetoothMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4sp"
                android:text="Se connecter au travers du bluetooth" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutOfflineAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal"
        android:focusable="true">

        <ImageView
            android:id="@+id/PlaneMode"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/Icon_plane_desc"
            app:srcCompat="@drawable/plane_icon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TitlePlaneMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/network_PlaneMode_title"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/DescPlaneMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4sp"
                android:text="@string/network_PlaneMode_desc" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>